--- a/ParallelGraphicProcessing/ParallelGraphicProcessing.csproj
+++ b/ParallelGraphicProcessing/ParallelGraphicProcessing.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
+<!--		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>-->
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
@@ -63,6 +63,22 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Maui.Graphics.Skia" Version="8.0.100" />
 		<PackageReference Include="SkiaSharp" Version="2.88.9" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="C:\Users\Mthia\.nuget\packages\microsoft.windowsappsdk\1.5.240802000\buildTransitive\..\include\WindowsAppSDK-VersionInfo.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="C:\Users\Mthia\.nuget\packages\microsoft.windowsappsdk\1.5.240802000\buildTransitive\..\include\DeploymentManagerAutoInitializer.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="C:\Users\Mthia\.nuget\packages\microsoft.windowsappsdk\1.5.240802000\buildTransitive\..\include\DeploymentManagerAutoInitializer.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="C:\Users\Mthia\.nuget\packages\microsoft.windowsappsdk\1.5.240802000\buildTransitive\..\include\WindowsAppSDK-VersionInfo.cs" />
 	</ItemGroup>
 
 </Project>
